--- a/users/nick/ghostty/config
+++ b/users/nick/ghostty/config
@@ -17,4 +17,6 @@ macos-icon = official
 window-padding-balance = true
 window-padding-y = 1
 window-padding-x = 1
-keybind = global:cmd+shift+t=toggle_quick_terminal
+keybind = global:cmd+ctrl+t=toggle_quick_terminal
+window-height = 1000
+window-width = 1000
