--- a/users/nick/ghostty/config
+++ b/users/nick/ghostty/config
@@ -7,5 +7,7 @@ adjust-underline-position = 2
 adjust-cursor-thickness = 1
 window-padding-balance = true
 keybind = global:cmd+ctrl+t=toggle_quick_terminal
+keybind = super+shift+j=write_screen_file:paste
+keybind = super+alt+shift+j=write_screen_file:open
 window-height = 1000
 window-width = 1000
