--- a/users/nick/ghostty/config
+++ b/users/nick/ghostty/config
@@ -18,5 +18,6 @@ window-height = 1000
 window-width = 1000
 mouse-hide-while-typing = true
 macos-non-native-fullscreen = visible-menu
+quick-terminal-animation-duration = 0.05
 # background-opacity = 0.98
 # background-blur-radius = 20
