Aerospace, ghostty and package updates

--- a/users/nick/ghostty/config
+++ b/users/nick/ghostty/config
@@ -10,7 +10,8 @@ font-feature = -calt
 theme = light:jb-light,dark:jb-dark
 macos-option-as-alt = left
 adjust-cell-height = 15%
-adjust-cursor-thickness = 1
+# Required for Neovim to not being covered by vertical lines
+adjust-cursor-thickness = 2
 window-padding-balance = true
 keybind = global:cmd+ctrl+t=toggle_quick_terminal
 keybind = super+shift+j=write_screen_file:paste
