--- a/users/nick/ghostty/config
+++ b/users/nick/ghostty/config
@@ -20,3 +20,4 @@ mouse-hide-while-typing = true
 macos-non-native-fullscreen = visible-menu
 background-opacity = 0.95
 background-blur-radius = 20
+cursor-style = bar
