Adds window title plugin

--- a/users/nick/ghostty/config
+++ b/users/nick/ghostty/config
@@ -21,3 +21,5 @@ macos-non-native-fullscreen = visible-menu
 background-opacity = 0.95
 background-blur-radius = 20
 cursor-style = bar
+# disables title to allow zsh plugin to work properly
+shell-integration-features = cursor,no-sudo,no-title
