--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 charset = utf-8
 end_of_line = lf
 indent_size = 4
-indent_style = tab
+indent_style = space
 insert_final_newline = true
 #max_line_length = 120
 tab_width = 4
@@ -19,6 +19,6 @@ indent_style = space
 tab_width = 2
 
 
-[{*.nix,*.json}]
+[{*.nix,*.json,*.js}]
 indent_style = space
 indent_size = 2
