Adds tmux config

--- a/users/nick/tmux.conf
+++ b/users/nick/tmux.conf
@@ -1,25 +1,44 @@
-set -g status-left-length 14
+# Allow for longer window titles
+set -g status-left-length 20
 set -sg escape-time 0
 set -g status-interval 0
+# Kills window and pane without confirmation
 bind-key & kill-window
 bind-key x kill-pane
+# Adds icon to window title to identify tmux
 set -g set-titles-string "⧉ #T"
+# Allows for window titles to be updated
 set -g set-titles on
 set -g allow-rename on
 set -g automatic-rename on
-
+# Starts window numbering at 1
+set -g base-index 1
 # Fixes colors in tmux
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",$TERM:RGB"
 # Enables undercurl in tmux
 set -ga terminal-features ",$TERM:usstyle"
-
 # Neovim requested
 set -g focus-events on
-
 # Enables mouse mode
 set -g mouse on
 set -g history-limit 100000
+# Enable vi mode
+set -g mode-keys vi
+# Enables vi mode for copy/paste
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+# Vim keys for pane navigation
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+# Reloads config
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded"
+# Removes date and time from status bar
+set -g status-right '#H'
+
 
 # Color Scheme dark and light modes
 if-shell "echo $(/usr/bin/defaults read -g AppleInterfaceStyle 2>/dev/null) | grep Dark" \
