Adjusts tmux theme

--- a/users/nick/tmux/tmux.conf
+++ b/users/nick/tmux/tmux.conf
@@ -6,7 +6,7 @@ set -g status-interval 0
 bind-key & kill-window
 bind-key x kill-pane
 # Adds icon to window title to identify tmux
-set -g set-titles-string "⧉ #T"
+set -g set-titles-string "⧉ #S | #W"
 # Allows for window titles to be updated
 set -g set-titles on
 set -g allow-rename on
@@ -35,16 +35,12 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 # Reloads config
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded"
+bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display-message "tmux.conf reloaded"
 # Removes date and time from status bar
 set -g status-right '#H'
 
 
 # Color Scheme dark and light modes
 if-shell "echo $(/usr/bin/defaults read -g AppleInterfaceStyle 2>/dev/null) | grep Dark" \
-  "set -g pane-border-style fg='#393B40'; \
-   set -g pane-active-border-style fg='#393B40' \
-  " \
-  "set -g pane-border-style fg='#EBECF0'; \
-   set -g pane-active-border-style fg='#EBECF0' \
-  "
+    "source $XDG_CONFIG_HOME/tmux/tmux-dark.conf" \
+    "source $XDG_CONFIG_HOME/tmux/tmux-light.conf"
