--- a/users/nick/ghostty/config
+++ b/users/nick/ghostty/config
@@ -23,3 +23,4 @@ background-blur-radius = 20
 cursor-style = bar
 # disables title to allow zsh plugin to work properly
 shell-integration-features = cursor,no-sudo,no-title
+window-inherit-working-directory = false
