feat(fonts): fixes jb nerd font in ghostty

--- a/users/nick/ghostty/config
+++ b/users/nick/ghostty/config
@@ -1,3 +1,4 @@
+font-family = "JetBrainsMonoNL Nerd Font"
 # font-family = "TX-02-Trial"
 # adjust-underline-position = 4
 # adjust-underline-thickness = -1
