--- a/users/nick/jj/starship-jj.toml
+++ b/users/nick/jj/starship-jj.toml
@@ -6,7 +6,8 @@ exclude = []
 
 [[module]]
 type = "Symbol"
-symbol = "󱗆"
+# symbol = "󱗆"
+symbol = "󰘬"
 color = "BrightBlack"
 
 [[module]]
@@ -17,7 +18,7 @@ behind_symbol = "↑"
 
 [[module]]
 type = "Commit"
-max_length = 24
+max_length = 35
 color = "BrightBlack"
 
 [[module]]
@@ -36,7 +37,7 @@ color = "Cyan"
 
 [module.empty]
 disabled = false
-text = "(empty)"
+text = "∅"
 color = "Yellow"
 
 [module.immutable]
@@ -51,20 +52,20 @@ color = "Yellow"
 
 [[module]]
 type = "Metrics"
-template = "󰇂"
+template = "[{changed} {added}{removed}]"
 color = "BrightBlack"
 
 [module.changed_files]
 prefix = ""
 suffix = ""
-color = "Cyan"
+color = "BrightBlack"
 
 [module.added_lines]
 prefix = "+"
 suffix = ""
-color = "Green"
+color = "BrightBlack"
 
 [module.removed_lines]
 prefix = "-"
 suffix = ""
-color = "Red"
+color = "BrightBlack"
