--- a/users/nick/jj/starship-jj.toml
+++ b/users/nick/jj/starship-jj.toml
@@ -23,6 +23,13 @@ max_length = 24
 empty_text = ""
 surround_with_quotes = false
 color = "BrightBlack"
+# Show the previous commits description in case current is empty
+# This will also print the previous_message_symbol
+show_previous_if_empty = true
+
+# A prefix that will be printed when the current commit is empty and the previous commit is shown
+previous_message_symbol = "⇣"
+
 
 [[module]]
 type = "State"
